Enhance exception handling and configuration with new methods
- Added detailed JavaDoc comments to BadRequestException for better
clarity on usage.
- Updated ServerConfiguration to utilize URI for base URL construction.
- Introduced new methods in IAccessControlService for file type handling
and data stream ID computation.